# kvasir-capsule-loader

./: .gitignore  CHANGELOG.md  README.md  config.json  generate_default_split.py  pyproject.toml
.github/workflows/: python-package.yml
examples/: train_resnet.py
kvasircapsuleloader/: __init__.py  bbox.py  config.py  dataset.py  download.py  metadata.py  sample.py  split.py  transforms.py  types.py  utils.py
tests/: test_types.py
